Docs: docs for /auth/activate
